Extend new layout to NB

--- a/_includes/slipstream_intro.html
+++ b/_includes/slipstream_intro.html
@@ -7,7 +7,7 @@
   <div class="container">
     <h1>SlipStream®
 	  {% if page.sub %}
-	    - {{ page.sub }}
+	    - {{ page.subtitle }}
       {% endif %}
 	</h1>
     <p>{{ page.summary }}</p>
