--- a/_layouts/article_nuvlabox_overview.html
+++ b/_layouts/article_nuvlabox_overview.html
@@ -1,75 +1,132 @@
 <!DOCTYPE html>
 <html>
-
   {% include head.html %}
+  <body>
   {% include top.html %}
   {% include nuvlabox_nav.html %}
   {% include nuvlabox_intro.html %}
 
-        <div class="main-story nuvlabox">
-          <div class="container big">
-            <p align="center">
-             
-          </div>
+    <div class="jumbotron">
+        <div class="container">
+            {% include nuvlabox_pitch.html %}
         </div>
+
         <div class="container big spacy">
           <h1>What do you get?</h1>
-          <div class="row">
-            <div class="col-md-4">
-              <h2>Privacy</h2>
-              <p>
-                A private cloud solution ideal for SME/SMB, NGO and small campuses.
-              </p>
+            <div class="row row-highlights">
+              <div class="col-md-6 col-2-image">
+                  <h1>
+                      <center>
+                          <span class="glyphicon glyphicon-scale"></span>
+                      </center>
+                  </h1>
+              </div>
+              <div class="col-md-6 col-2-text">
+                <h2>Privacy</h2>
+                <p>
+                  A private cloud solution ideal for SME/SMB, NGO and small campuses.
+                </p>
+              </div>
             </div>
-            <div class="col-md-4">
-              <h2>
-                  Security
-              </h2>
-              <p>
-                  All communication encrypted and deployments automated for higher security.
-              </p>
+            <div class="row row-highlights">
+              <div class="col-md-6 col-2-text">
+                <h2>
+                    Security
+                </h2>
+                <p>
+                    All communication encrypted and deployments automated for higher security.
+                </p>
+              </div>
+              <div class="col-md-6 col-2-image">
+                  <h1>
+                      <center>
+                          <span class="glyphicon glyphicon-scale"></span>
+                      </center>
+                  </h1>
+              </div>
             </div>
-            <div class="col-md-4">
-              <h2>
-                  Simplicity
-              </h2>
-              <p>
-                  Smart factory settings and zero config means it's a child's play to setup and use. 
-              </p>
+            <div class="row row-highlights">
+              <div class="col-md-6 col-2-image">
+                  <h1>
+                      <center>
+                          <span class="glyphicon glyphicon-scale"></span>
+                      </center>
+                  </h1>
+              </div>
+              <div class="col-md-6 col-2-text">
+                <h2>
+                    Simplicity
+                </h2>
+                <p>
+                    Smart factory settings and zero config means it's a child's play to setup and use. 
+                </p>
+              </div>
             </div>
-            <div class="col-md-4">
-              <h2>
-                  Connectivity
-              </h2>
-              <p>
-                  Includes built-in WiFi and dual Ethernet connections. Can also be remote controlled.
-              </p>
+            <div class="row row-highlights">
+              <div class="col-md-6 col-2-text">
+                <h2>
+                    Connectivity
+                </h2>
+                <p>
+                    Includes built-in WiFi and dual Ethernet connections. Can also be remote controlled.
+                </p>
+              </div>
+              <div class="col-md-6 col-2-image">
+                  <h1>
+                      <center>
+                          <span class="glyphicon glyphicon-scale"></span>
+                      </center>
+                  </h1>
+              </div>
             </div>
-            <div class="col-md-4">
-              <h2>
-                  Cost savings
-              </h2>
-              <p>
-                  Replace up to 8 of your servers with an appliance as small as a modem...or 2 Swiss chocolate boxes.
-              </p>
+            <div class="row row-highlights">
+              <div class="col-md-6 col-2-image">
+                  <h1>
+                      <center>
+                          <span class="glyphicon glyphicon-scale"></span>
+                      </center>
+                  </h1>
+              </div>
+              <div class="col-md-6 col-2-text">
+                <h2>
+                    Cost savings
+                </h2>
+                <p>
+                    Replace up to 8 of your servers with an appliance as small as a modem...or 2 Swiss chocolate boxes.
+                </p>
+              </div>
             </div>
-            <div class="col-md-4">
-              <h2>
-                  Scalability
-              </h2>
-              <p>
-                  Can scale out to remote or public clouds, giving you the simplest ever complete hybrid cloud solution.
-              </p>
+            <div class="row row-highlights">
+              <div class="col-md-6 col-2-text">
+                <h2>
+                    Scalability
+                </h2>
+                <p>
+                    Can scale out to remote or public clouds, giving you the simplest ever complete hybrid cloud solution.
+                </p>
+              </div>
+              <div class="col-md-6 col-2-image">
+                  <h1>
+                      <center>
+                          <span class="glyphicon glyphicon-scale"></span>
+                      </center>
+                  </h1>
+              </div>
             </div>
           </div>
-        </div>
-      </div>
 
       <div class="main-story nuvlabox">
         <div class="container big spacy">
-          <h1 id="who-is-the-nuvlabox-for">Who is it for?</h1>
-          <div id="enterprise" class="row">
-            <div class="col-md-6">
+          <h1>Who is it for?</h1>
+          <div id="enterprise" class="row row-highlights">
+            <div class="col-md-6 col-2-image">
+                <h1>
+                    <center>
+                        <span class="glyphicon glyphicon-scale"></span>
+                    </center>
+                </h1>
+            </div>
+            <div class="col-md-6 col-2-text">
               <h2>
                 Small and Medium Enterprises
               </h2>
@@ -77,25 +134,44 @@
                 Perfect for SMEs wishing to access a small to medium-sized private cloud. NuvlaBox offers an affordable entry point into private company cloud computing.
               </p>
             </div>
-            <div id="sme" class="col-md-6">
+          </div>
+          <div id="sme" class="row row-highlights">
+            <div class="col-md-6 col-2-text">
               <h2>
                 Large Enterprises
               </h2>
               <p>
-                Ideal for larger enterprises wishing to federate smaller sites. NuvlaBox can be interconnected to maximise sharing and optimise resource utilisation.
-             
-      </div>
-			 <div class="col-md-6">
-          <h2>
-            Governments and Public Bodies
-          </h2>
-          <p>
-            The NuvlaBox 
-     			 </p>
+                Ideal for larger enterprises wishing to federate smaller sites. NuvlaBox can be interconnected to maximise sharing and optimise resource utilisation.</p>
+            </div>
+            <div class="col-md-6 col-2-image">
+                <h1>
+                    <center>
+                        <span class="glyphicon glyphicon-scale"></span>
+                    </center>
+                </h1>
+            </div>
+          </div>
+          <div id="gov_ngo" class="row row-highlights">
+            <div class="col-md-6 col-2-image">
+                <h1>
+                    <center>
+                        <span class="glyphicon glyphicon-scale"></span>
+                    </center>
+                </h1>
+            </div>
+            <div class="col-md-6 col-2-text">
+              <h2>
+                Governments and Public Bodies
+              </h2>
+              <p>
+                The NuvlaBox 
+        			</p>
+            </div>
           </div>
         </div>
       </div>
-   </div>
+    </div>
+  </div>
       {% include whats_next.html %}
       {% include footer.html %}
 
