--- a/_layouts/welcome.html
+++ b/_layouts/welcome.html
@@ -17,78 +17,17 @@
 	  <div class="container">
 	    <h1>SlipStream&reg;: Application Deployment Platform</h1>
 	    <h2>Affordable, multi-cloud application management platform, built on open source professional software, for the enterprise, with love.</h2>
-        {% include slipstream_pitch.html %}
-      </div>
+      {% include slipstream_pitch.html %}
     </div>
+  </div>
 
-    <div class="jumbotron main-story nuvlabox">
-      <div class="container">
-        <h1>NuvlaBox&reg;: Cloud in a box appliance</h1>
-        <h2>All the power of the cloud packaged in a simple, small and secure device.</h2>
-        <div class="row row-summary-nuvlabox">
-          <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
-            <div>
-              <div>
-                <h1>
-                  <center>
-                    <span class="glyphicon glyphicon-hdd"></span>
-                    <span style="color: gray">+</span>
-                    <span style="color: #CF2121" class="glyphicon glyphicon-globe" aria-hidden="true"></span>
-                  </center>
-                </h1>
-                <h2>Private cloud for SMEs</h2>
-                <ul>
-                  <li>Affordable entry point to cloud</li>
-                  <li>Sets up in seconds, runs forever</li>
-                  <li>Remote management and update of apps</li>
-                </ul>
-              </div>
-              <center><a class="btn btn-primary btn-lg" role="button" href="/products/nuvlabox/overview">Learn more &raquo;</a></center>
-            </div>
-          </div>
-          <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
-            <div>
-              <div>
-                <h1>
-                  <center>
-                    <span class="glyphicon glyphicon-hdd"></span>
-                    <span style="color: gray">+</span>
-                    <span style="color: #CF2121" class="glyphicon glyphicon-grain" aria-hidden="true"></span>
-                  </center>
-                </h1>
-                <h2>Rapid IT for field operations</h2>
-                <ul>
-                  <li>Simple, quick set up makes NuvlaBox ideal for IT operations in field or outpost </li>
-                  <li>Apps and content delivered using a number of IP links (e.g. land, satellites, air)</li>
-                  <li>Ruggedised casing and fanless design provide increased operational lifespan</li>
-                </ul>
-              </div>
-              <center><a class="btn btn-primary btn-lg" role="button" href="/products/nuvlabox/usecases#Field-Operations-with-Agile-Local-Infrastructure">Learn more &raquo;</a></center>
-            </div>
-          </div>
-          <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
-            <div>
-              <div>
-                <h1>
-                  <center>
-                    <span class="glyphicon glyphicon-cloud"></span>
-                    <span style="color: gray">+</span>
-                    <span style="color: #CF2121" class="glyphicon glyphicon-th" aria-hidden="true"></span>
-                  </center>
-                </h1>
-                <h2>Simple IT solution for complex world</h2>
-                <ul>
-				  <li>Plug and play set up</li>
-                  <li>Point and click application deployment</li>
-                  <li>Apps cached locally, reducing dependency on network availability</li>
-                </ul>
-              </div>
-              <center><a class="btn btn-primary btn-lg" role="button" href="/products/nuvlabox/features">Learn more &raquo;</a></center>
-            </div>
-          </div>
-        </div>
-      </div>
+  <div class="jumbotron main-story nuvlabox">
+    <div class="container">
+      <h1>NuvlaBox&reg;: Cloud in a box appliance</h1>
+      <h2>All the power of the cloud packaged in a simple, small and secure device.</h2>
+      {% include nuvlabox_pitch.html %}
     </div>
+  </div>
     
     <div class="jumbotron main-story">
       <div class="container spacy">
