--- a/_includes/slipstream_pitch.html
+++ b/_includes/slipstream_pitch.html
@@ -1,4 +1,4 @@
-    <div class="row row-summary-slipstream">
+    <div class="row row-summary row-summary-slipstream">
       <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
         <div>
           <div>
@@ -16,7 +16,7 @@
               <li>Streamline your processes with your own self-service IT platform or Enterprise App Store</li>
             </ul>
           </div>
-          <center><a class="btn btn-primary btn-lg" role="button" href="/products/slipstream/overview">Learn more &raquo;</a></center>
+          <center><a class="btn btn-primary btn-lg" role="button" href="/products/slipstream/paas">Learn more &raquo;</a></center>
         </div>
       </div>
       <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
@@ -36,7 +36,7 @@
               <li>Add full app deployment to your continuous integration system</li>
             </ul>
           </div>
-          <center><a class="btn btn-primary btn-lg" role="button" href="/products/slipstream/usecases#DevOps-platform">Learn more &raquo;</a></center>
+          <center><a class="btn btn-primary btn-lg" role="button" href="/products/slipstream/usecases/#DevOps-platform">Learn more &raquo;</a></center>
         </div>
       </div>
       <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
@@ -56,7 +56,7 @@
               <li>Use private and public cloud together to reduce costs and increase elasticity</li>
             </ul>
           </div>
-          <center><a class="btn btn-primary btn-lg" role="button" href="/products/slipstream/usecases#Hybrid-Cloud-Provisioning">Learn more &raquo;</a></center>
+          <center><a class="btn btn-primary btn-lg" role="button" href="/products/slipstream/usecases/#Hybrid-Cloud-Provisioning">Learn more &raquo;</a></center>
         </div>
       </div>
     </div>
