--- a/_includes/whats_next.html
+++ b/_includes/whats_next.html
@@ -4,8 +4,10 @@
     <p>
 Interested and want to know more? We'd be pleased to provide you with further information. Get in touch.
     </p>
-    <button onclick="window.location.href='/contact.html#contact-us-form'" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#contact-modal">
-      Contact us &raquo;
-    </button>
+    <a href="/contact/#contact-us-form">
+      <button class="btn btn-primary btn-lg" data-toggle="modal" data-target="#contact-modal">
+        Contact us &raquo;
+      </button>
+    </a>
   </div>
 </div>
