--- a/_layouts/article_slipstream_overview.html
+++ b/_layouts/article_slipstream_overview.html
@@ -34,7 +34,7 @@
                     <p>SlipStream communicates with all mainstream IaaS cloud services via a connector architecture. This means we're already talking to the cloud you use and will make it easier for you to deploy your apps there. Or if you can't decide which cloud to use, SlipStream takes the stress out of making the wrong decision</p>
                     <center><a class="btn btn-primary btn-lg" role="button" href="/products/slipstream/overview">Learn more &raquo;</a></center>
                 </div>
-                <div class="col-md-6 col-2-image">
+                <div class="col-md-6 col-2-image vertical-align">
                     <h1>
                         <center>
                             <span class="glyphicon glyphicon-leaf"></span>
@@ -81,38 +81,59 @@
                   <center><a class="btn btn-primary btn-lg" role="button" href="/products/slipstream/overview">Learn more &raquo;</a></center>
               </div>
               <div class="col-md-6 col-2-image">
-                  </div>
-                </div>
-                <div id="sme" class="row row-highlights">
-                    <div class="col-md-6 col-2-text">
-                        <h2>Managed Service Providers</h2>
-                        <p>The Managed Services sector represents the largest growing component of the IT market. SlipStream helps MSPs differentiate themselves in this highly competitive environment by allowing them to take advantage of automation and provide a higher level of service without adding cost </p>
-                        <center><a class="btn btn-primary btn-lg" role="button" href="/products/slipstream/overview">Learn more &raquo;</a></center>
-                    </div>
-                    <div class="col-md-6 col-2-image">
-                        </div>
-                      </div>
-                      <div id="sme" class="row row-highlights">
-                          <div class="col-md-6 col-2-text">
-                              <h2>Value Added Resellers</h2>
-                              <p>The shift to cloud services, particularly to “Software as a Service offerings”, has  disrupted the Value-Added Reseller business model. In the cloud era, customers now expect access to their specialized applications without the hassle and cost of running the hardware. SlipStream helps VARs offer that service.</p>
-                              <center><a class="btn btn-primary btn-lg" role="button" href="/products/slipstream/overview">Learn more &raquo;</a></center>
-                          </div>
-                          <div class="col-md-6 col-2-image">
-                              </div>
-                            </div>
-                            <div id="sme" class="row row-highlights">
-                                <div class="col-md-6 col-2-text">
-                                    <h2>IaaS Providers</h2>
-                                    <p>The commoditization of cloud resources has squeezed IaaS service providers forcing them to differentiate their services from their competitors or to live with ever reducing margins. They face increasing competition from cloud service offerings at all levels. SlipStream meets these challenges, providing advanced automation features and significant benefits simplifying the transition from a IaaS provider to a Managed Service Provider..</p>
-                                    <center><a class="btn btn-primary btn-lg" role="button" href="/products/slipstream/overview">Learn more &raquo;</a></center>
-                                </div>
-                                <div class="col-md-6 col-2-image">
-                  <h1>
-                      <center>
-                          <span class="glyphicon glyphicon-scale"></span>
-                      </center>
-                  </h1>
+                <h1>
+                  <center>
+                    <span class="glyphicon glyphicon-scale"></span>
+                  </center>
+                </h1>
+              </div>
+          </div>
+          <div id="sme" class="row row-highlights">
+              <div class="col-md-6 col-2-image">
+                <h1>
+                  <center>
+                    <span class="glyphicon glyphicon-scale"></span>
+                  </center>
+                </h1>
+              </div>
+              <div class="col-md-6 col-2-text">
+                <h2>Managed Service Providers</h2>
+                <p>The Managed Services sector represents the largest growing component of the IT market. SlipStream helps MSPs differentiate themselves in this highly competitive environment by allowing them to take advantage of automation and provide a higher level of service without adding cost </p>
+                <center>
+                  <a class="btn btn-primary btn-lg" role="button" href="/products/slipstream/overview">Learn more &raquo;</a>
+                </center>
+              </div>
+          </div>
+          <div id="sme" class="row row-highlights">
+              <div class="col-md-6 col-2-text">
+                <h2>Value Added Resellers</h2>
+                <p>The shift to cloud services, particularly to “Software as a Service offerings”, has  disrupted the Value-Added Reseller business model. In the cloud era, customers now expect access to their specialized applications without the hassle and cost of running the hardware. SlipStream helps VARs offer that service.</p>
+                <center>
+                  <a class="btn btn-primary btn-lg" role="button" href="/products/slipstream/overview">Learn more &raquo;</a>
+                </center>
+              </div>
+              <div class="col-md-6 col-2-image">
+                <h1>
+                  <center>
+                    <span class="glyphicon glyphicon-scale"></span>
+                  </center>
+                </h1>
+              </div>
+          </div>
+          <div id="sme" class="row row-highlights">
+              <div class="col-md-6 col-2-image">
+                <h1>
+                  <center>
+                    <span class="glyphicon glyphicon-scale"></span>
+                  </center>
+                </h1>
+              </div>
+              <div class="col-md-6 col-2-text">
+                <h2>IaaS Providers</h2>
+                <p>The commoditization of cloud resources has squeezed IaaS service providers forcing them to differentiate their services from their competitors or to live with ever reducing margins. They face increasing competition from cloud service offerings at all levels. SlipStream meets these challenges, providing advanced automation features and significant benefits simplifying the transition from a IaaS provider to a Managed Service Provider..</p>
+                <center>
+                  <a class="btn btn-primary btn-lg" role="button" href="/products/slipstream/overview">Learn more &raquo;</a>
+                </center>
               </div>
           </div>
       </div>
