Updates to SlipStream & NuvlaBox overview and product pages. Plus some use cases

--- a/_layouts/article_nuvlabox_overview.html
+++ b/_layouts/article_nuvlabox_overview.html
@@ -22,53 +22,53 @@
                   </h1>
               </div>
               <div class="col-md-6 col-2-text">
-                <h2>Privacy</h2>
+                <h2>Privacy & Security</h2>
                 <p>
-                  A private cloud solution ideal for SME/SMB, NGO and small campuses.
+For most smaller organisations, the cost of a private cloud infrastructure is prohibitive. With the NuvlaBox, you get an affordable entry point into cloud computing. NuvlaBox includes complete Infrastructure as a Service (IaaS)  and Platform as a Service (PaaS) solutions.All communication is encrypted and deployments automated for higher security. This means that there is no compromise on cloud capabilities. Or security. And it's all yours.
                 </p>
               </div>
             </div>
             <div class="row row-highlights">
-              <div class="col-md-6 col-2-text">
-                <h2>
-                    Security
-                </h2>
-                <p>
-                    All communication encrypted and deployments automated for higher security.
-                </p>
-              </div>
-              <div class="col-md-6 col-2-image">
-                  <h1>
-                      <center>
-                          <span class="glyphicon glyphicon-scale"></span>
-                      </center>
-                  </h1>
-              </div>
-            </div>
-            <div class="row row-highlights">
-              <div class="col-md-6 col-2-image">
-                  <h1>
-                      <center>
-                          <span class="glyphicon glyphicon-scale"></span>
-                      </center>
-                  </h1>
-              </div>
               <div class="col-md-6 col-2-text">
                 <h2>
                     Simplicity
                 </h2>
                 <p>
-                    Smart factory settings and zero config means it's a child's play to setup and use. 
+                    Smart factory settings and zero config means it's a child's play to set up and use. You plug it in, power it up and you are good to go. Combined with its remote-control capabilities, this means you don't always need IT experts on-site. 
                 </p>
+              </div>
+              <div class="col-md-6 col-2-image">
+                  <h1>
+                      <center>
+                          <span class="glyphicon glyphicon-scale"></span>
+                      </center>
+                  </h1>
               </div>
             </div>
             <div class="row row-highlights">
+              <div class="col-md-6 col-2-image">
+                  <h1>
+                      <center>
+                          <span class="glyphicon glyphicon-scale"></span>
+                      </center>
+                  </h1>
+              </div>
               <div class="col-md-6 col-2-text">
                 <h2>
                     Connectivity
                 </h2>
                 <p>
-                    Includes built-in WiFi and dual Ethernet connections. Can also be remote controlled.
+                    Once powered-up, the box will create its own local Wi-Fi network, which can be used by any device (e.g. laptop, smart phone, tablet, pc). The NuvlaBox can also be remote controlled.
+                </p>
+              </div>
+            </div>
+            <div class="row row-highlights">
+              <div class="col-md-6 col-2-text">
+                <h2>
+                     Cost savings
+                </h2>
+                <p>
+                    Replace up to 8 of your servers with an appliance as small as a modem...or 2 Swiss chocolate boxes. The NuvlaBox can fully manage up to 8 virtual servers, including applications, from a user-friendly web interface. Why clog up your office with ugly servers? 
                 </p>
               </div>
               <div class="col-md-6 col-2-image">
@@ -89,28 +89,15 @@
               </div>
               <div class="col-md-6 col-2-text">
                 <h2>
-                    Cost savings
+                   Scalability
                 </h2>
                 <p>
-                    Replace up to 8 of your servers with an appliance as small as a modem...or 2 Swiss chocolate boxes.
+                   The NuvlaBox supports hybrid deployment scenarios, so you can scale out to remote or public clouds, giving you the simplest ever complete hybrid cloud solution. Workloads can easily be moved from a private cloud to a public cloud giving flexibility and efficient scaling. 
                 </p>
               </div>
             </div>
             <div class="row row-highlights">
               <div class="col-md-6 col-2-text">
-                <h2>
-                    Scalability
-                </h2>
-                <p>
-                    Can scale out to remote or public clouds, giving you the simplest ever complete hybrid cloud solution.
-                </p>
-              </div>
-              <div class="col-md-6 col-2-image">
-                  <h1>
-                      <center>
-                          <span class="glyphicon glyphicon-scale"></span>
-                      </center>
-                  </h1>
               </div>
             </div>
           </div>
@@ -131,7 +118,7 @@
                 Small and Medium Enterprises
               </h2>
               <p>
-                Perfect for SMEs wishing to access a small to medium-sized private cloud. NuvlaBox offers an affordable entry point into private company cloud computing.
+                The NuvlaBox is perfect for SMEs wishing to access a small to medium-sized private cloud. It offers an affordable entry point into private company cloud computing which doesn't require on-site IT support.
               </p>
             </div>
           </div>
@@ -141,7 +128,7 @@
                 Large Enterprises
               </h2>
               <p>
-                Ideal for larger enterprises wishing to federate smaller sites. NuvlaBox can be interconnected to maximise sharing and optimise resource utilisation.</p>
+                Ideal for larger enterprises wishing to federate smaller sites, the NuvlaBox can be interconnected to maximise sharing and optimise resource utilisation. It also offers a solution to service providers experiencing edge-of-the-network problems.</p>
             </div>
             <div class="col-md-6 col-2-image">
                 <h1>
@@ -164,7 +151,7 @@
                 Governments and Public Bodies
               </h2>
               <p>
-                The NuvlaBox 
+                Due to its simplicity, portability and flexibility, the NuvlaBox has countless uses in the field of education, medicine, field ops, critical infrastructure. Why not test us out and see if we can help you with your IT problem? 
         			</p>
             </div>
           </div>
