--- a/_includes/nuvlabox_intro.html
+++ b/_includes/nuvlabox_intro.html
@@ -2,7 +2,11 @@
 </div>
 <div class="jumbotron top_product nuvlabox">
   <div class="container">
-    <h1>NuvlaBox</h1>
-    <p>A portable cloud-in-a-box that's child's play to use and manage</p>
+    <h1><img alt="SlipStream" style="padding-bottom: 18px;" src="/img/design/nuvlabox_logo_white_on_transparent_256px.png"></img>
+  	  {% if page.subtitle %}
+  	    : {{ page.subtitle }}
+        {% endif %}
+  	</h1>
+    <p>All the power of the cloud packaged in a simple, small and secure device.</p>
   </div>
 </div>
