--- a/_includes/slipstream_pitch.html
+++ b/_includes/slipstream_pitch.html
@@ -4,19 +4,25 @@
           <div>
             <h1>
               <center>
-                <span class="glyphicon glyphicon-cloud"></span>
+                <span title="Cloud" class="glyphicon glyphicon-cloud"></span>
                 <span style="color: gray">+</span>
-                <span style="color: #CF2121" class="glyphicon glyphicon-flash"></span>
+                <span title="Automation" style="color: #CF2121" class="glyphicon glyphicon-flash"></span>
               </center>
             </h1>
-            <h2>Platform as a Service (Paas)</h2>
+            <h2>Platform as a Service (PaaS)</h2>
             <ul>
               <li>Take full advantage of the cloud, avoiding cloud provider and technology lock-in</li>
               <li>Automate application deployment for your team, your organisation or your customers</li>
               <li>Streamline your processes with your own self-service IT platform or Enterprise App Store</li>
             </ul>
           </div>
-          <center><a class="btn btn-primary btn-lg" role="button" href="/products/slipstream/paas">Learn more &raquo;</a></center>
+          <center><a class="btn btn-primary btn-lg" role="button" 
+            {% if page.layout == 'welcome' %}
+        	    href="/products/slipstream"
+        	  {% else %}
+      	      href="/products/slipstream/paas"
+        	  {% endif %}
+        	    >Learn more &raquo;</a></center>
         </div>
       </div>
       <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
@@ -24,9 +30,9 @@
           <div>
             <h1>
               <center>
-                <span class="glyphicon glyphicon-cloud"></span>
+                <span title="Cloud" class="glyphicon glyphicon-cloud"></span>
                 <span style="color: gray">+</span>
-                <span style="color: #CF2121" class="glyphicon glyphicon-sunglasses"></span>
+                <span title="Cool" style="color: #CF2121" class="glyphicon glyphicon-sunglasses"></span>
               </center>
             </h1>
             <h2>DevOps platform</h2>
@@ -36,7 +42,13 @@
               <li>Add full app deployment to your continuous integration system</li>
             </ul>
           </div>
-          <center><a class="btn btn-primary btn-lg" role="button" href="/products/slipstream/usecases/#DevOps-platform">Learn more &raquo;</a></center>
+          <center><a class="btn btn-primary btn-lg" role="button" 
+            {% if page.layout == 'welcome' %}
+        	    href="/products/slipstream"
+        	  {% else %}
+      	      href="/products/slipstream/paas"
+        	  {% endif %}
+        	    >Discover &raquo;</a></center>
         </div>
       </div>
       <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
@@ -44,9 +56,9 @@
           <div>
             <h1>
               <center>
-                <span class="glyphicon glyphicon-cloud"></span>
+                <span title="Cloud" class="glyphicon glyphicon-cloud"></span>
                 <span style="color: gray">+</span>
-                <span style="color: #CF2121" class="glyphicon glyphicon-cloud" aria-hidden="true"></span>
+                <span title="Oh another cloud" style="color: #CF2121" class="glyphicon glyphicon-cloud" aria-hidden="true"></span>
               </center>
             </h1>
             <h2>Hybrid cloud manager</h2>
@@ -56,7 +68,13 @@
               <li>Use private and public cloud together to reduce costs and increase elasticity</li>
             </ul>
           </div>
-          <center><a class="btn btn-primary btn-lg" role="button" href="/products/slipstream/usecases/#Hybrid-Cloud-Provisioning">Learn more &raquo;</a></center>
+          <center><a class="btn btn-primary btn-lg" role="button" 
+            {% if page.layout == 'welcome' %}
+        	    href="/products/slipstream"
+        	  {% else %}
+      	      href="/products/slipstream/paas"
+        	  {% endif %}
+        	    >Read it &raquo;</a></center>
         </div>
       </div>
     </div>
