--- a/_includes/whats_next.html
+++ b/_includes/whats_next.html
@@ -1,4 +1,4 @@
-<div style="color: white; background-color: #9B9B9B;">
+<div style="color: white; background-color: #9B9B9B; padding: 10px 0 20px 0">
   <div class="container spacy">
     <h1>What's next?</h1>
     <p>
