--- a/_layouts/article_slipstream_overview.html
+++ b/_layouts/article_slipstream_overview.html
@@ -7,7 +7,7 @@
   {% include slipstream_intro.html %}
 
       <div class="jumbotron">
-    
+
           <div class="container">
               {% include slipstream_pitch.html %}
           </div>
@@ -25,14 +25,14 @@
                 <div class="col-md-6 col-2-text">
                     <h2>Automation</h2>
                     <p>Repetitive, manual deployments are costing your organisation money. Introducing automation will reduce expenditure and give your people more time to create greater things.</p>
-                    <center><a class="btn btn-primary btn-lg" role="button" href="/products/slipstream/overview">Learn more &raquo;</a></center>
+                    <center><a class="btn btn-primary btn-lg" role="button" href="/products/slipstream/tryme">Try me &raquo;</a></center>
                 </div>
             </div>
             <div class="row row-highlights">
                 <div class="col-md-6 col-2-text">
                     <h2>Cloud Neutrality</h2>
                     <p>SlipStream communicates with all mainstream IaaS cloud services via a connector architecture. This means we're already talking to the cloud you use and will make it easier for you to deploy your apps there. Or if you can't decide which cloud to use, SlipStream takes the stress out of making the wrong decision. SlipStream’s cloud neutrality means it isolates users from vendor lock-in, providing unprecedented flexibility in your choice of cloud solutions.</p>
-                    <center><a class="btn btn-primary btn-lg" role="button" href="/products/slipstream/overview">Learn more &raquo;</a></center>
+                    <center><a class="btn btn-primary btn-lg" role="button" href="/products/slipstream/features/#all-clouds">All clouds &raquo;</a></center>
                 </div>
                 <div class="col-md-6 col-2-image vertical-align">
                     <h1>
@@ -54,6 +54,20 @@
                     <h2>Scalability</h2>
                     <p>If your private cloud is not giving you all you need, but you don't want to invest in more infrastructure, you can use SlipSteam to scale out to a public cloud and get the best of both worlds.</p>
                     <center><a class="btn btn-primary btn-lg" role="button" href="/products/slipstream/overview">Learn more &raquo;</a></center>
+                </div>
+            </div>
+            <div class="row row-highlights">
+                <div class="col-md-6 col-2-text">
+                    <h2>An Extensible Framework</h2>
+                    <p>Take advantage of existing templates, such as load balancers, database clusters, Hadoop systems and more. But don't stay there, you can extend these and create your own. Take also advantage of configuration management systems, such as Puppet, Chef and Ansible. What about Docker? It's also batteries included, with support for Docker and Docker Swarms.</p>
+                    <center><a class="btn btn-primary btn-lg" role="button" href="/products/slipstream/features/#all-clouds">All clouds &raquo;</a></center>
+                </div>
+                <div class="col-md-6 col-2-image vertical-align">
+                    <h1>
+                        <center>
+                            <span class="glyphicon glyphicon-leaf"></span>
+                        </center>
+                    </h1>
                 </div>
             </div>
         </div>
@@ -144,24 +158,30 @@
                 <div class="col-md-6 col-2-image">
                     <h1>
                         <center>
-                            <span class="glyphicon glyphicon-scale"></span>
+                            <span class="glyphicon glyphicon-play"></span>
                         </center>
                     </h1>
                 </div>
                 <div class="col-md-6 col-2-text">
 		            <h2>Sign up for the free SaaS</h2>
 		            <p>SlipStream can be used for free via the  SaaS. You only pay for the cloud services you consume. This is a good option if your organisation is happy with the idea of public cloud or doesn't have much demand for cloud services. Or if you just want to test it out. Signing up takes just a couple of minutes and the user interface is a pleasure. Go ahead, give it a try!</p>
-                </div>
+                <center>
+                  <a class="btn btn-primary btn-lg" role="button" href="/products/products/slipstream/tryme">Try me &raquo;</a>
+                </center>
+              </div>
             </div>
             <div class="row row-highlights">
                 <div class="col-md-6 col-2-text">
 			        <h2>Install it on premise</h2>
 			        <p>If you prefer to install SlipStream within your own walls, you can buy an on-premise license. The model can be tailor-made to suit your organisation. This option is best if you need access to support and maintenance, and  to proprietary connectors.</p>
+              <center>
+                <a class="btn btn-primary btn-lg" role="button" href="/products/slipstream/install">Install &raquo;</a>
+              </center>
 			    </div>
                 <div class="col-md-6 col-2-image">
                     <h1>
                         <center>
-                            <span class="glyphicon glyphicon-scale"></span>
+                            <span class="glyphicon glyphicon-eye-open"></span>
                         </center>
                     </h1>
                 </div>
@@ -170,14 +190,18 @@
                 <div class="col-md-6 col-2-image">
                     <h1>
                         <center>
-                            <span class="glyphicon glyphicon-scale"></span>
+                            <img src="/img/content/nuvlabox/photos/nb_front.png"></span>
                         </center>
                     </h1>
                 </div>
                 <div class="col-md-6 col-2-text">
 			        <h2>Buy our <src href="/products/nuvlabox">NuvlaBox</src></h2>
-			        <p>SlipStream also comes packaged in its own portable appliance, giving you an affordable way to benefit from a private cloud supplied with top class software</p>
-			    </div>
+			        <p>SlipStream also comes packaged in its own portable appliance, giving you an affordable way to benefit from a private cloud supplied with top class software.</p>
+			        <p>This provides an affordable entry point to cloud computing. The NuvlaBox sets up in seconds and thanks to its robust fan-less design, will runs for a long time.</p>
+			        <p>Remote management and update of apps is also supported using a SlipStream 'mothership'.</p>
+              <center>
+                <a class="btn btn-primary btn-lg" role="button" href="/products/nuvlabox">Tell me more &raquo;</a>
+              </center>
             </div>
           </div>
         </div>
