--- a/_includes/slipstream_intro.html
+++ b/_includes/slipstream_intro.html
@@ -5,10 +5,10 @@
 </div>
 <div class="jumbotron top_product slipstream">
   <div class="container">
-    <h1>SlipStream®
-	  {% if page.sub %}
-	    - {{ page.subtitle }}
-      {% endif %}
+    <h1><img src="/img/design/slipstream_logo_white_on_transparent_256px.png"></img>
+	  {% if page.subtitle %}
+	    {{ page.subtitle }}
+    {% endif %}
 	</h1>
     <p>{{ page.summary }}</p>
 <!--		<p>Sign Up for SlipStream Training Event!</p><a href="http://www.eventbrite.com/e/slipstream-training-hands-on-use-of-a-cloud-management-platform-tickets-16393996886?ref=ebtnebtckt" target="_blank"><img src="https://www.eventbrite.com/custombutton?eid=16393996886" alt="Eventbrite - SlipStream Training: hands on use of a cloud management platform" /></a> -->
