WIP (getting there)

--- a/_includes/slipstream_pitch.html
+++ b/_includes/slipstream_pitch.html
@@ -46,7 +46,7 @@
             {% if page.layout == 'welcome' %}
         	    href="/products/slipstream"
         	  {% else %}
-      	      href="/products/slipstream/paas"
+      	      href="/products/slipstream/usecases/#DevOps-platform"
         	  {% endif %}
         	    >Discover &raquo;</a></center>
         </div>
@@ -72,7 +72,7 @@
             {% if page.layout == 'welcome' %}
         	    href="/products/slipstream"
         	  {% else %}
-      	      href="/products/slipstream/paas"
+      	      href="/products/slipstream/usecases/#Hybrid-Cloud-Provisioning"
         	  {% endif %}
         	    >Read it &raquo;</a></center>
         </div>
