--- a/_layouts/welcome.html
+++ b/_layouts/welcome.html
@@ -42,7 +42,7 @@
           <div class="col-md-6">
             <h2>We support all mainstream clouds</h2>
             <h3>Can't find your cloud? Get in touch... chances are we're already working on it.</h3>
-            <p style="padding-top: 30px;"><a class="btn btn-primary btn-lg" role="button" href="/products/slipstream/features">Learn more &raquo;</a></p>
+            <p style="padding-top: 30px;"><a class="btn btn-primary btn-lg" role="button" href="/products/slipstream/cloud-connectors">Show me &raquo;</a></p>
           </div>
         </div>
       </div>
