--- a/_layouts/article_slipstream_overview.html
+++ b/_layouts/article_slipstream_overview.html
@@ -32,7 +32,7 @@
                 <div class="col-md-6 col-2-text">
                     <h2>Cloud Neutrality</h2>
                     <p>SlipStream communicates with all mainstream IaaS cloud services via a connector architecture. This means we're already talking to the cloud you use and will make it easier for you to deploy your apps there. Or if you can't decide which cloud to use, SlipStream takes the stress out of making the wrong decision. SlipStream’s cloud neutrality means it isolates users from vendor lock-in, providing unprecedented flexibility in your choice of cloud solutions.</p>
-                    <center><a class="btn btn-primary btn-lg" role="button" href="/products/slipstream/features/#all-clouds">All clouds &raquo;</a></center>
+                    <center><a class="btn btn-primary btn-lg" role="button" href="/products/slipstream/cloud-connectors">All clouds &raquo;</a></center>
                 </div>
                 <div class="col-md-6 col-2-image vertical-align">
                     <h1>
@@ -46,26 +46,26 @@
                 <div class="col-md-6 col-2-image">
                     <h1>
                         <center>
-                            <span class="glyphicon glyphicon-scale"></span>
+                            <span class="glyphicon glyphicon-fullscreen"></span>
                         </center>
                     </h1>
                 </div>
                 <div class="col-md-6 col-2-text">
                     <h2>Scalability</h2>
                     <p>If your private cloud is not giving you all you need, but you don't want to invest in more infrastructure, you can use SlipSteam to scale out to a public cloud and get the best of both worlds.</p>
-                    <center><a class="btn btn-primary btn-lg" role="button" href="/products/slipstream/overview">Learn more &raquo;</a></center>
+                    <center><a class="btn btn-primary btn-lg" role="button" href="/products/slipstream/features">Learn more &raquo;</a></center>
                 </div>
             </div>
             <div class="row row-highlights">
                 <div class="col-md-6 col-2-text">
                     <h2>An Extensible Framework</h2>
                     <p>Take advantage of existing templates, such as load balancers, database clusters, Hadoop systems and more. But don't stay there, you can extend these and create your own. Take also advantage of configuration management systems, such as Puppet, Chef and Ansible. What about Docker? It's also batteries included, with support for Docker and Docker Swarms.</p>
-                    <center><a class="btn btn-primary btn-lg" role="button" href="/products/slipstream/features/#all-clouds">All clouds &raquo;</a></center>
+                    <center><a class="btn btn-primary btn-lg" role="button" href="/products/slipstream/features">All clouds &raquo;</a></center>
                 </div>
                 <div class="col-md-6 col-2-image vertical-align">
                     <h1>
                         <center>
-                            <span class="glyphicon glyphicon-leaf"></span>
+                            <span class="glyphicon glyphicon-resize-full"></span>
                         </center>
                     </h1>
                 </div>
@@ -78,7 +78,7 @@
               <div class="col-md-6 col-2-image">
                   <h1>
                       <center>
-                          <span class="glyphicon glyphicon-scale"></span>
+                          <span class="glyphicon glyphicon-check"></span>
                       </center>
                   </h1>
               </div>
@@ -97,7 +97,7 @@
               <div class="col-md-6 col-2-image">
                 <h1>
                   <center>
-                    <span class="glyphicon glyphicon-scale"></span>
+                    <span class="glyphicon glyphicon-question-sign"></span>
                   </center>
                 </h1>
               </div>
@@ -106,7 +106,7 @@
               <div class="col-md-6 col-2-image">
                 <h1>
                   <center>
-                    <span class="glyphicon glyphicon-scale"></span>
+                    <img style="max-height: 280px;" src="/img/content/eguides/MSP_eGuide_screen_shot.png" />
                   </center>
                 </h1>
               </div>
@@ -114,7 +114,7 @@
                 <h2>Managed Service Providers</h2>
                 <p>The Managed Services sector represents the largest growing component of the IT market. SlipStream helps MSPs differentiate themselves in this highly competitive environment by allowing them to take advantage of automation and provide a higher level of service without adding cost </p>
                 <center>
-                  <a class="btn btn-primary btn-lg" role="button" href="/products/slipstream/overview">Learn more &raquo;</a>
+                  <a class="btn btn-primary btn-lg" role="button" href="http://media.sixsq.com/how-can-managed-service-providers-benefit-from-automation">Learn more &raquo;</a>
                 </center>
               </div>
           </div>
@@ -123,13 +123,13 @@
                 <h2>Value Added Resellers</h2>
                 <p>The shift to cloud services, particularly to “Software as a Service offerings”, has  disrupted the Value-Added Reseller business model. In the cloud era, customers now expect access to their specialized applications without the hassle and cost of running the hardware. SlipStream helps VARs offer that service.</p>
                 <center>
-                  <a class="btn btn-primary btn-lg" role="button" href="/products/slipstream/overview">Learn more &raquo;</a>
+                  <a class="btn btn-primary btn-lg" role="button" href="http://media.sixsq.com/how-can-vars-benefit-from-application-deployment-automation">Learn more &raquo;</a>
                 </center>
               </div>
               <div class="col-md-6 col-2-image">
                 <h1>
                   <center>
-                    <span class="glyphicon glyphicon-scale"></span>
+                    <img style="max-height: 280px;" src="/img/content/eguides/VAR_eGuide_screen_shot.png" />
                   </center>
                 </h1>
               </div>
@@ -138,7 +138,7 @@
               <div class="col-md-6 col-2-image">
                 <h1>
                   <center>
-                    <span class="glyphicon glyphicon-scale"></span>
+                    <img style="max-height: 280px;" src="/img/content/eguides/IaaS_eGuide_screen_shot.png" />
                   </center>
                 </h1>
               </div>
@@ -146,7 +146,7 @@
                 <h2>IaaS Providers</h2>
                 <p>The commoditization of cloud resources has squeezed IaaS service providers forcing them to differentiate their services from their competitors or to live with ever reducing margins. They face increasing competition from cloud service offerings at all levels. SlipStream meets these challenges, providing advanced automation features and significant benefits simplifying the transition from a IaaS provider to a Managed Service Provider..</p>
                 <center>
-                  <a class="btn btn-primary btn-lg" role="button" href="/products/slipstream/overview">Learn more &raquo;</a>
+                  <a class="btn btn-primary btn-lg" role="button" href="http://media.sixsq.com/how-can-iaas-providers-benefit-from-application-deployment-automation">Learn more &raquo;</a>
                 </center>
               </div>
           </div>
