--- a/css/jumbotron.css
+++ b/css/jumbotron.css
@@ -23,6 +23,11 @@ h2 a:hover {
   text-decoration: none;
 }
 
+h3 {
+  font-size: 21px;
+  font-weight: 200;
+}
+
 img {
   max-width: 90%;
 }
@@ -147,6 +152,34 @@ div.nuvlabox.odd {
   overflow: hidden;
 }
 
+.soon {
+  border: none;
+  display: block;
+  overflow: hidden;
+  position: relative;
+  text-align: center;
+}
+
+.soon div {
+  color: white;
+  background-color: #a00000;
+  opacity: 1;
+  z-index: 1000;
+  text-align: center;
+  float: right;
+  width: 250px;
+  font-size: 22px;
+  margin-top: 20px;
+  margin-right: -110px;
+  -webkit-transform: rotate(45deg);
+  -moz-transform: rotate(45deg);
+  transform: rotate(45deg);
+  -webkit-box-shadow: 0 0 6px 2px white;
+  -moz-box-shadow: 0 0 6px 2px white;
+  box-shadow: 0 0 6px 2px white;
+  overflow: hidden;
+}
+
 #small_logo_twitter {
   background-image: url(/img/design/social_logos/twitter_hover.png);
   background-repeat: no-repeat;
@@ -232,6 +265,18 @@ div.nuvlabox.odd {
   border: 4px solid #800000;
 }
 
+.cloud > div > div {
+  border: 4px solid white;
+}
+
+.cloud > div > div:hover {
+  border: 4px solid #800000;
+}
+
+.cloud img {
+  max-height: 130px;
+}
+
 @media (min-width:1200px) { 
   .row-summary-slipstream .col-md-4 > div > div {
     height: 270px;
@@ -262,6 +307,35 @@ div.nuvlabox.odd {
 
 
 @media (min-width:1200px) { 
+  .cloud > .row .col-md-3 {
+    height: 200px;
+    /*background: blue;*/
+  }
+}
+
+@media (max-width:1200px) { 
+  .cloud > .row .col-md-3 {
+    height: 100px;
+    /*background: white;*/
+  }
+}
+
+@media (max-width:992px) { 
+  .cloud > .row .col-md-3 > div > div {
+    height: auto;
+    /*background: yellow;*/
+  }
+}
+
+@media (max-width:768px) { 
+  .cloud > .row .col-md-3 > div > div {
+    height: auto;
+    /*background: black;*/
+  }
+}
+
+
+@media (min-width:1200px) { 
   .row-summary-slipstream-usecases .col-md-4 > div > div {
     height: 200px;
     /*background: blue;*/
@@ -270,7 +344,7 @@ div.nuvlabox.odd {
 
 @media (max-width:1200px) { 
   .row-summary-slipstream-usecases .col-md-4 > div > div {
-    height: 340px;
+    height: 260px;
     /*background: white;*/
   }
 }
